footer + fix page + alignement de la navbar

--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -3,7 +3,7 @@
   display: flex;
   align-items: center;
   justify-content: space-around;
-  height: 50px;
+  height: 60px;
 }
 .footer-links {
   display: flex;
